# spotify-fetcher

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  pyproject.toml
src/: config.py  main.py
src/authorization/: controller.py  view.py
src/tracks/: view.py
